Create hero section

--- a/index.html
+++ b/index.html
@@ -30,5 +30,46 @@
         <h3><div class="menuItem">HIPPIE</div></h3>
       </div>
     </nav>
+    <div class="slider">
+      <div class="sliderWrapper">
+        <div class="sliderItem">
+          <img src="img/air.png" alt="" class="sliderImg">
+          <div class="sliderBg"></div>
+          <h1 class="sliderTitle">AIR FORCE <br> NEW <br> SEASON</h1>
+          <h2 class="sliderPrice">$199</h2>
+          <button class="buyButton">Buy Now!</button>
+        </div>
+        <div class="sliderItem">
+          <img src="img/jordan.png" alt="" class="sliderImg">
+          <div class="sliderBg"></div>
+          <h1 class="sliderTitle">AIR FORCE <br> NEW <br> SEASON</h1>
+          <h2 class="sliderPrice">$199</h2>
+          <button class="buyButton">Buy Now!</button>
+        </div>
+        <div class="sliderItem">
+          <img src="img/blazer.png" alt="" class="sliderImg">
+          <div class="sliderBg"></div>
+          <h1 class="sliderTitle">AIR FORCE <br> NEW <br> SEASON</h1>
+          <h2 class="sliderPrice">$199</h2>
+          <button class="buyButton">Buy Now!</button>
+        </div>
+        <div class="sliderItem">
+          <img src="img/crater.png" alt="" class="sliderImg">
+          <div class="sliderBg"></div>
+          <h1 class="sliderTitle">AIR FORCE <br> NEW <br> SEASON</h1>
+          <h2 class="sliderPrice">$199</h2>
+          <button class="buyButton">Buy Now!</button>
+        </div>
+        <div class="sliderItem">
+          <img src="img/hippie.png" alt="" class="sliderImg">
+          <div class="sliderBg"></div>
+          <h1 class="sliderTitle">AIR FORCE <br> NEW <br> SEASON</h1>
+          <h2 class="sliderPrice">$199</h2>
+          <button class="buyButton">Buy Now!</button>
+        </div> 
+      </div>
+    </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
