--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <h3><div class="menuItem mt-5 mb-3 mr-7 cursor-pointer text-slate-200">HIPPIE</div></h3>
       </div>
     </nav>
-    <div class="slider">
-      <div class="sliderWrapper flex">
+    <div class="slider overflow-hidden">
+      <div class="sliderWrapper flex transition-all duration-700 ease-in-out">
         <div class="sliderItem relative flex items-center justify-center">
           <img src="img/air.png" alt="" class="sliderImg" />
           <div class="sliderBg bg-lime-500"></div>
@@ -68,13 +68,13 @@
         </div>
         <div class="sliderItem relative flex items-center justify-center">
           <img src="img/crater.png" alt="" class="sliderImg" />
-          <div class="sliderBg  bg-stone-700"></div>
+          <div class="sliderBg bg-stone-700"></div>
           <h1 class="sliderTitle absolute top-20 right-72 text-white text-center text-6xl font-semibold">
             AIR FORCE <br />
             NEW <br />
             SEASON
           </h1>
-          <h2 class="sliderPrice text-stone-700 absolute top-28 left-72 text-center text-6xl font-thin border p-2">$199</h2>
+          <h2 class="sliderPrice text-white absolute top-28 left-72 text-center text-6xl font-thin border p-2">$199</h2>
           <button class="buyButton">Buy Now!</button>
         </div>
         <div class="sliderItem relative flex items-center justify-center">
@@ -85,9 +85,32 @@
             NEW <br />
             SEASON
           </h1>
-          <h2 class="sliderPrice text-gray-800 absolute top-28 left-72 text-center text-6xl font-thin border p-2">$199</h2>
+          <h2 class="sliderPrice text-white absolute top-28 left-72 text-center text-6xl font-thin border p-2">$199</h2>
           <button class="buyButton">Buy Now!</button>
         </div>
+      </div>
+    </div>
+
+    <div class="features flex items-center justify-center">
+      <div class="feature">
+        <img class="featureIcon" src="img/shipping.png" alt="" />
+        <span class="featureTitle">FREE SHIPPING</span>
+        <span class="featureDesc">Free worldwide shipping on all orders.</span>
+      </div>
+      <div class="feature">
+        <img class="featureIcon" src="img/return.png" alt="" />
+        <span class="featureTitle">30 DAYS RETURN</span>
+        <span class="featureDesc">No question return and easy refund in 14 days.</span>
+      </div>
+      <div class="feature">
+        <img class="featureIcon" src="img/gift.png" alt="" />
+        <span class="featureTitle">GIFT CARDS</span>
+        <span class="featureDesc">Buy gift cards and use coupon codes easily.</span>
+      </div>
+      <div class="feature">
+        <img class="featureIcon" src="img/contact.png" alt="" />
+        <span class="featureTitle">CONTACT US!</span>
+        <span class="featureDesc">Keep in touch via email and support system.</span>
       </div>
     </div>
 
