--- a/index.html
+++ b/index.html
@@ -42,71 +42,81 @@
             SEASON
           </h1>
           <h2 class="sliderPrice absolute top-28 left-72 text-center text-6xl font-thin border p-2 text-lime-500">$199</h2>
-          <button
-            class="buyButton absolute top-2/4 right-[10%] text-white items-center text-3xl font-black border-2 border-solid border-white-600 bg-black cursor-pointer"
-          >
-            Buy Now!
-          </button>
+          <a href="#product">
+            <button
+              class="buyButton absolute top-2/4 right-[10%] text-white items-center text-3xl font-black border-2 border-solid border-white-600 bg-black cursor-pointer"
+            >
+              Buy Now!
+            </button>
+          </a>
         </div>
         <div class="sliderItem relative flex items-center justify-center w-screen">
           <img src="img/jordan.png" alt="" class="sliderImg" />
           <div class="sliderBg bg-rose-500 w-[750px] h-[750px] rounded-full absolute"></div>
           <h1 class="sliderTitle absolute top-20 right-72 text-white text-center text-6xl font-semibold">
-            AIR FORCE <br />
+            AIR JORDAN <br />
             NEW <br />
             SEASON
           </h1>
-          <h2 class="sliderPrice absolute top-28 left-72 text-center text-6xl font-thin border p-2 text-rose-500">$199</h2>
-          <button
-            class="buyButton absolute top-2/4 right-[10%] text-white items-center text-3xl font-black border-2 border-solid border-white-600 bg-black cursor-pointer"
-          >
-            Buy Now!
-          </button>
+          <h2 class="sliderPrice absolute top-28 left-72 text-center text-6xl font-thin border p-2 text-rose-500">$149</h2>
+          <a href="#product">
+            <button
+              class="buyButton absolute top-2/4 right-[10%] text-white items-center text-3xl font-black border-2 border-solid border-white-600 bg-black cursor-pointer"
+            >
+              Buy Now!
+            </button>
+          </a>
         </div>
         <div class="sliderItem relative flex items-center justify-center w-screen">
           <img src="img/blazer.png" alt="" class="sliderImg" />
           <div class="sliderBg bg-cyan-600 w-[750px] h-[750px] rounded-full absolute"></div>
           <h1 class="sliderTitle absolute top-20 right-72 text-white text-center text-6xl font-semibold">
-            AIR FORCE <br />
+            BLAZER <br />
             NEW <br />
             SEASON
           </h1>
-          <h2 class="sliderPrice text-cyan-600 absolute top-28 left-72 text-center text-6xl font-thin border p-2">$199</h2>
-          <button
-            class="buyButton absolute top-2/4 right-[10%] text-white items-center text-3xl font-black border-2 border-solid border-white-600 bg-black cursor-pointer"
-          >
-            Buy Now!
-          </button>
+          <h2 class="sliderPrice text-cyan-600 absolute top-28 left-72 text-center text-6xl font-thin border p-2">$109</h2>
+          <a href="#product">
+            <button
+              class="buyButton absolute top-2/4 right-[10%] text-white items-center text-3xl font-black border-2 border-solid border-white-600 bg-black cursor-pointer"
+            >
+              Buy Now!
+            </button>
+          </a>
         </div>
         <div class="sliderItem relative flex items-center justify-center w-screen">
           <img src="img/crater.png" alt="" class="sliderImg" />
           <div class="sliderBg bg-stone-700 w-[750px] h-[750px] rounded-full absolute"></div>
           <h1 class="sliderTitle absolute top-20 right-72 text-white text-center text-6xl font-semibold">
-            AIR FORCE <br />
+            CRATER <br />
             NEW <br />
             SEASON
           </h1>
-          <h2 class="sliderPrice text-white absolute top-28 left-72 text-center text-6xl font-thin border p-2">$199</h2>
-          <button
-            class="buyButton absolute top-2/4 right-[10%] text-white items-center text-3xl font-black border-2 border-solid border-white-600 bg-black cursor-pointer"
-          >
-            Buy Now!
-          </button>
+          <h2 class="sliderPrice text-white absolute top-28 left-72 text-center text-6xl font-thin border p-2">$129</h2>
+          <a href="#product">
+            <button
+              class="buyButton absolute top-2/4 right-[10%] text-white items-center text-3xl font-black border-2 border-solid border-white-600 bg-black cursor-pointer"
+            >
+              Buy Now!
+            </button>
+          </a>
         </div>
         <div class="sliderItem relative flex items-center justify-center w-screen">
           <img src="img/hippie.png" alt="" class="sliderImg" />
           <div class="sliderBg bg-gray-800 w-[750px] h-[750px] rounded-full absolute"></div>
           <h1 class="sliderTitle absolute top-20 right-72 text-white text-center text-6xl font-semibold">
-            AIR FORCE <br />
+            HIPPIE <br />
             NEW <br />
             SEASON
           </h1>
-          <h2 class="sliderPrice text-white absolute top-28 left-72 text-center text-6xl font-thin border p-2">$199</h2>
-          <button
-            class="buyButton absolute top-2/4 right-[10%] text-white items-center text-3xl font-black border-2 border-solid border-white-600 bg-black cursor-pointer"
-          >
-            Buy Now!
-          </button>
+          <h2 class="sliderPrice text-white absolute top-28 left-72 text-center text-6xl font-thin border p-2">$99</h2>
+          <a href="#product">
+            <button
+              class="buyButton absolute top-2/4 right-[10%] text-white items-center text-3xl font-black border-2 border-solid border-white-600 bg-black cursor-pointer"
+            >
+              Buy Now!
+            </button>
+          </a>
         </div>
       </div>
     </div>
@@ -134,22 +144,24 @@
       </div>
     </div>
 
-    <div class="product h-screen bg-[whitesmoke] relative">
+    <div class="product h-screen bg-[whitesmoke] relative" id="product">
       <img src="img/air.png" alt="" class="productImg w-[50%]" />
-      <div class="productDetails absolute top-[10%] right-[0] w-[40%] p-[50px] justify-center flex flex-col pt-[90px]">
+      <div class="productDetails absolute top-[10%] right-[0] w-[40%] p-[50px]">
         <h1 class="productTitle text-[75px] font-black mb-6">AIR FORCE</h1>
         <h2 class="productPrice text-[22px] font-bold mb-3">$199</h2>
-        <p class="productDesc italic text-gray-600 mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus eius nam repudiandae ab asperiores culpa.dolor sit amet.</p>
+        <p class="productDesc italic text-gray-600 mb-4">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus eius nam repudiandae ab asperiores culpa.dolor sit amet.
+        </p>
         <div class="colors flex mb-4">
           <div class="color w-[32px] h-[32px] rounded bg-black mr-3 cursor-pointer"></div>
           <div class="color w-[32px] h-[32px] rounded bg-blue-900 cursor-pointer"></div>
         </div>
         <div class="sizes flex mb-3">
-          <div class="size px-5 py-1 mr-3 border-2 border-black">42</div>
-          <div class="size px-5 py-1 mr-3 border-2 border-black">43</div>
-          <div class="size px-5 py-1 mr-3 border-2 border-black">44</div>
+          <div class="size px-5 py-1 mr-3 border-2 border-black cursor-pointer">42</div>
+          <div class="size px-5 py-1 mr-3 border-2 border-black cursor-pointer">43</div>
+          <div class="size px-5 py-1 mr-3 border-2 border-black cursor-pointer">44</div>
         </div>
-        <button class="productButton text-start border-2 px">BUY NOW!</button>
+        <button class="productButton bg-black text-white hover:bg-white hover:text-black float-end p-2 mt-5">BUY NOW!</button>
       </div>
     </div>
 
